Bug 468040 -  nsImapFolder's notifyDownloadedLines / m_downloadMessageForOfflineUse flag breaks when confronted with autosync and gloda. r+sr=bienvenu.